<resources>
    <string name="app_name">Scholar</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_evaluation">Evaluation</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_subjects">Subjects</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navDrawer_account">My Account</string>
    <string name="navDrawer_schedule">Schedule</string>
    <string name="navDrawer_subjects">Subjects</string>
    <string name="navDrawer_clubs">Clubs</string>
    <string name="navDrawer_settings">Settings</string>

    <string name="snackbar_failedConnect">Couldn\'t connect to Scholar</string>
    <string name="snackbar_connected">Connected!</string>
    <string name="snackbar_failedSave">Couldn\'t save your changes</string>
    <string name="snackbar_retry">Try again</string>

    <string name="login_activityPrompt">Welcome to Scholar!\nPlease sign-up or login below</string>
    <string name="login_fieldEmail">Your email address</string>
    <string name="login_hintEmail">scholar@school.edu</string>
    <string name="login_fieldPassword">Password</string>
    <string name="login_hintPassword">min 6 characters</string>
    <string name="login_fieldPasswordConfirm">Confirm password</string>
    <string name="login_hintPasswordConfirm">Just retype the same password</string>
    <string name="login_createAccount">Get started</string>
    <string name="login_login">Log in</string>

    <string name="home_greeting">Welcome back %s</string>
    <string name="home_greetingSub">Here\'s what\'s coming up…</string>
    <string name="home_noEventsToday">You have no events today</string>
    <string name="home_occursToday">Today</string>
    <string name="home_occursTomorrow">Tomorrow</string>
    <string name="home_occursInThreeDays">In 3 Days</string>

    <string name="modelOptions_duplicate">Duplicate</string>
    <string name="modelOptions_delete">Delete</string>

    <string name="editModel_teacher">%s</string>
    <string name="editModel_noTeacher">No teacher selected</string>
    <string name="editModel_addToList">Add</string>
    <string name="editModel_change">Edit</string>
    <string name="editModel_recurring">Repeat</string>

    <string name="subject_list_expand">Expand</string>
    <string name="editSubject_name_hint">Subject name</string>
    <string name="editSubject_code_hint">Subject code e.g.\) COMP</string>
    <string name="editSubject_courses">Courses</string>

    <string name="editCourse_name_hint">Course name</string>
    <string name="editCourse_code_hint">Course code e.g.\) 1406</string>
    <string name="editCourse_classes">Classes</string>
    <string name="editCourse_editEvaluation">Edit evaluation</string>

    <string name="editClass_name">Class: %s</string>
    <string name="editClass_name_hint">Class name</string>
    <string name="editClass_editSchedule">Edit Schedule</string>

    <string name="editEvaluation_tests">Tests</string>
    <string name="editEvaluation_deliverables">Assignments</string>
    <string name="editEvaluation_dueInDays">%d days</string>
    <string name="editEvaluation_overallContribution">Percent towards course grade</string>

    <string name="editTest_new">New test</string>
    <string name="editTest_name_hint">Test name</string>
    <string name="editTest_desc_hint">Test description</string>

    <string name="editDeliv_new">New assignment</string>
    <string name="editDeliv_name_hint">Assignment name</string>
    <string name="editDeliv_desc_hint">Assignment description</string>

    <string name="editSchedule_start">Start date</string>
    <string name="editSchedule_repeatBasis">Repeats</string>
    <string name="editSchedule_repeatDays">Repeat Days</string>
    <string name="editSchedule_repeatNo">Doesn\'t repeat</string>
    <string name="editSchedule_repeatBasisOption">Every</string>
    <string name="editSchedule_delay_hint">Delay</string>
    <string name="editSchedule_repeatSpinnerSelectDays">Select days</string>
    <string name="editSchedule_repeatSpinnerDayOWeekFormat">Every %s</string>
    <string name="editSchedule_repeatSpinnerItemFormat">Every %d%s %s of the %s</string>
    <plurals name="editSchedule_basisDay">
        <item quantity="one">day</item>
        <item quantity="many">days</item>
    </plurals>
    <plurals name="editSchedule_basisWeek">
        <item quantity="one">week</item>
        <item quantity="many">weeks</item>
    </plurals>
    <plurals name="editSchedule_basisMonth">
        <item quantity="one">month</item>
        <item quantity="many">months</item>
    </plurals>
    <plurals name="editSchedule_basisYear">
        <item quantity="one">year</item>
        <item quantity="many">years</item>
    </plurals>
    <string name="editSchedule_end">Ends</string>
    <string name="editSchedule_end_after">After</string>
    <string name="editSchedule_end_occur">times</string>
    <string-array name="firstSecondThirdEtcArr">
        <item>st</item>
        <item>nd</item>
        <item>rd</item>
        <item>th</item>
    </string-array>

    <string name="selectPerson_name_hint">First name, Last name</string>
</resources>
