<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@color/colorPrimaryLight"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="60dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/editCourse_txtSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp"
                android:textStyle="italic"
                tools:text="Some Subject" />

            <TextView
                android:id="@+id/editCourse_txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="A Course" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_label_outline_black_24dp"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/editCourse_editName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:autofillHints="@string/editCourse_name_hint"
                android:ems="10"
                android:hint="@string/editCourse_name_hint"
                android:inputType="text"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_code_black_24dp"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/editCourse_editCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:autofillHints="@string/editCourse_code_hint"
                android:ems="10"
                android:hint="@string/editCourse_code_hint"
                android:inputType="text"
                tools:targetApi="o" />

        </LinearLayout>

        <include
            layout="@layout/snippet_edit_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/editCourse_btnEvaluation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@color/colorBgSecondary"
            android:text="@string/editCourse_editEvaluation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:text="@string/editCourse_classes"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editCourse_addClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_add_circle_outline_black_24dp"
                android:drawablePadding="10dp"
                android:orientation="horizontal"
                android:text="@string/editModel_addToList"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/classes_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />

    </LinearLayout>

</ScrollView>